src/styles.css
:root {
    --txt-defualt: black;
    --modal-shadow: rgba(0, 0, 0, 0.5);
    --txt-contrast: #E0B97D;
    --pad-defualt: 1.25rem;
}

* {
    box-sizing: border-box;
    font-family: monospace;
}

body {
    margin: 0;
    background-image: url("./photo-1598025792291-44ed6654d628.avif");
    background-repeat: no-repeat;
    background-size: cover;
    /* display: grid; */
    /* grid-template-rows: 97% 3%; */
    height: 100vh;
    overflow: hidden;
}

/* modal */

#modal-shadow {
    position: absolute;
    width: 100vw;
    height: 100vh;
    /* display: flex;
    justify-content: center;
    align-items: center; */
    background-color: var(--modal-shadow);
    z-index: 1;
}

#modal {
    background-color: var(--txt-defualt);
    color: var(--txt-contrast);
    width: 68.75rem;
    padding: var(--pad-defualt);
    border-radius: var(--pad-defualt);
    z-index: 2;
    position: absolute;
    bottom: 50%;
    left: 50%;
    margin: auto;
}

#modal #modal-content {
    display: flex;
}

#modal #task-add-prompt {
    font-size: 1.5625rem;
    text-align: center;
    margin-bottom: var(--pad-defualt);
}

#modal #modal-content #add-task-form {
    width: 75%;
    display: flex;
    flex-direction: column;
}

#modal #modal-content #add-task-form #task-name, #task-desc, textarea {
    margin-bottom: var(--pad-defualt);
}

#modal #modal-content #add-task-form #task-name, #task-desc {
    background-color: var(--txt-contrast);
    border: .0625rem solid var(--txt-contrast);
    color: var(--txt-defualt);
}

#modal #modal-content #add-task-form textarea {
    height: 9.375rem;
    resize: none;
}

#modal #modal-content #add-task-form fieldset {
    display: flex;
    flex-direction: row;
    border: none;
    align-items: center;
}

#modal #modal-content #add-task-form fieldset legend {
    float: inline-start;
    font-size: 1.25rem;
}

#modal #modal-content #add-task-form fieldset div {
    display: flex;
    flex-direction: column;
}

#modal #modal-content #add-task-form fieldset div, fieldset legend {
    margin-right: var(--pad-defualt);
}

#modal #modal-content #add-task-form fieldset div input {
    margin-bottom: .625rem;
}

#modal #modal-content #task-calender {
    width: 35%;
}

#modal #modal-error-display {
    text-align: center;
    color: red;
}

#modal #modal-btns {
    text-align: center;
    margin-top: var(--pad-defualt);
}

#modal #modal-btns button {
    color: var(--txt-contrast);
    background-color: var(--txt-defualt);
    border: .0625rem solid var(--txt-contrast);
    padding: var(--pad-defualt);
    border-radius: var(--pad-defualt);
    transition: 0.2s;
}

#modal #modal-btns button:hover {
    color: var(--txt-defualt);
    border: .0625rem solid var(--txt-contrast);
    background-color: var(--txt-contrast);
}

#modal #modal-btns button:first-child {
    margin-right: var(--pad-defualt);
}

/* container */

#container {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 0;
}

/* interface */

#interface {
    padding: 1.5625rem;
    text-align: center;
}

/* tasks */

.task-container {
    display: flex;
    width: 34.375rem;
    margin: .625rem;
    height: 7.8125rem;
}

.task-status {
    width: 15%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.main-task-content {
    width: 100%;
    display: flex;
    background-color: var(--txt-defualt);
    color: var(--txt-contrast);
    padding: .625rem;
}

.main-task-content .task-number {
    width: 15%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 3.125rem;
}

.main-task-content .task-info .main-info {
    height: 70%;
    text-align: left;
}

.main-task-content .task-info .main-info .task-title {
    font-size: 1.25rem;
}

.task-settings {
    display: flex;
    flex-direction: column;
    width: 15%;
    background-color: var(--txt-defualt);
    color: var(--txt-contrast);
    padding: .625rem;
    text-align: left;
}

/* header */

header h1 {
    margin: 0;
}

/* main */

main #add-task {
    margin: var(--pad-defualt);
    display: flex;
    justify-content: center;
}

main #add-task button {
    background-color: var(--txt-defualt);
    padding: var(--pad-defualt);
    border-radius: var(--pad-defualt);
    border: none;
    color: var(--txt-contrast);
    display: flex;
    align-items: center;
}

main #add-task button span:nth-child(2) {
    margin-left: .625rem;
}

/* footer */

footer {
    text-align: center;
}

